Fixes positioning of side nav collapse button in some scenarios

--- a/docs/styles/pattern-library.less
+++ b/docs/styles/pattern-library.less
@@ -81,6 +81,7 @@ body {
         background: darken(@pl-header-bg, 5%);
         padding: 12px 15px;
         border: none;
+        float: left;
     }
 }
 
